istio/deploy/app.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: myapp-deployment-v1
  namespace: default
  labels:
    app: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
      version: v1
  template:
    metadata:
      labels:
        app: myapp
        version: v1
    spec:
      containers:
        - name: myapp
          image: pj3677/nginx-fn-istio:v1
          imagePullPolicy: Always
          ports:
          - containerPort: 80
            protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: myapp-deployment-v2
  namespace: default
  labels:
    app: myapp
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
      version: v2
  template:
    metadata:
      labels:
        app: myapp
        version: v2
    spec:
      containers:
        - name: myapp
          image: pj3677/nginx-fn-istio:v2
          imagePullPolicy: Always
          ports:
          - containerPort: 80
            protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: appservice
  namespace: default
  labels:
    app: appservice
spec:
  selector:
    app: myapp
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
